css/style.css
@font-face {
    font-family: norse;
    src: url(../fonts/Norse-Bold.otf);
}



* {
    box-sizing: border-box;
}

:root, body {
    padding: 0;
    margin: 0;
}

#container {
    display: flex;
    height: 100vh;
}

#hero-container {
    position: relative;
}

#logo-container {
    position: absolute;
    width: 100%;
    height: max(50px , 15vh);
    background-color: #00000080;
    top: 40vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

#hero-img {
    width: 32vw;
    height: 100%;
}

#second-container {
    background: #ededed;
    flex-grow: 1;
    display: flex;
    width: 68vw;
    align-items: center;
}

#second-container > div > p {
    font-size: 20px;
    margin-left: 2vw;
    font-weight: 900;
}

#logo-text {
    font-family: norse, sans-serif;
    color: white;
    opacity: 1;
    font-size: 50px;
    margin: auto;
}

#form-container {
    background: white;
    box-shadow: 0px 2px 6px 0px #9b9b9b;
}

#form {
    margin-left: 2vw;
    width: 75%;
    padding-top: max(4px, 1vw);
    padding-bottom: max(4px, 2vw);

}

.input {
    display: flex;
    flex-direction: column;
    min-width: 40%;
    gap: 3px;
}

#form-inputs {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    gap: max(5px, 2vw);
}

#form-footer {
    margin-left: 2vw;
    margin-top: 3vh;

} 

#submit-but {
    background: #193c06;
    border: 1px solid #1d4409;
    padding: 15px;
    color: #fff;
    font-size: 19px;
    border-radius: 6px 6px 6px 6px;
    transition: 0.5s linear;
    font-weight: 900;
}

#submit-but:hover {
    background: #2a7003;
    border: 1px solid #295610;
}

.inputbox {
    padding: 8px;
    border: 1px solid black;
    border-radius: 4px;
}

.inputbox:focus{
    box-shadow: inset 1px 0px 0px 1px #eee;
}

.inputbox:not(:placeholder-shown):invalid {
    border: 1px solid red;
}

.inputbox:valid {
    border: 1px solid green;
}

#form-footer p{
    font-weight: 900;
    font-size: 18px;
    margin-top: 4vh;
}

#form-footer a {
    color: green;
    text-decoration: none;
}

